--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-secure-storage": "^1.3.2"
+    "react-secure-storage": "^1.3.2",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
