--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.16",
+    "@types/prismjs": "^1.26.5",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.13.2",
     "framer-motion": "^12.25.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "prismjs": "^1.30.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-secure-storage": "^1.3.2",
+    "react-syntax-highlighter": "^16.1.0",
     "sonner": "^2.0.7"
   },
   "devDependencies": {
